fix: Fix occasional styling issues with elements visible within inactive Ant Tab panels.

--- a/src/style/univer.css
+++ b/src/style/univer.css
@@ -140,7 +140,7 @@ button.univer-toolbar-btn-active {
 }
 
 .ant-tabs-tabpane:not(.ant-tabs-tabpane-active) * {
-  visibility: hidden;
+  visibility: hidden !important;
 }
 
 
